syntax = "proto3";
option go_package = "github.com/kralicky/ragu/pkg/ragu/testdata/grpc1";
import "google/api/annotations.proto";
import "google/rpc/status.proto";
import "github.com/kralicky/grpc-gateway/v2/protoc-gen-openapiv2/options/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
	info: {
		title: "Testing";
		version: "1.0";
  };
};


package grpc1;

// Message Comment
message Test {
  // Field Comment A
  string A = 1;
  // Field Comment B
  int32 B = 2;
}

// Service Comment
service Service1 {
  // Method Comment
  rpc Testing(Test) returns (Test) {
    option (google.api.http) = {
      post: "/testing"
      body: "*"
    };
  }
}