syntax = "proto3";

package pkg1;

import "github.com/kralicky/ragu/testdata/grpc1/grpc_1.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/kralicky/ragu/testdata/pkg1";
option (grpc1.sample) = {
  foo: "bar"
  bar: 1
};

message Test2 {
  google.protobuf.Empty A = 1;
}
